<resources>
    <string name="app_name">Destino Certo</string>
    <string name="title_activity_main">Destino Certo</string>
    <string name="logo_description">Destino Certo Logo</string>

    <string name="action_settings">Configurações</string>
    <string name="action_about">Sobre</string>
    <string name="scan">Escanear</string>

    <string name="title_activity_package">Detalhes do Pacote</string>

    <string name="title_activity_image">Imagem do pacote</string>
    <string name="package_picture_description">Foto do pacote</string>
    <string name="fullscreen_image_description">Image do pacote</string>
    <string name="title_activity_about">Sobre o Destino Certo</string>

    <string name="about_text">Esse aplicativo foi criado durante o WorldSkills Digital Challenge 2015.
        O evento similar a um hackathon teve 4 dias de competição em São Paulo. 
        Membros do time: Alessandra Rosa, Guilherme Pontes, Kevin Dantas Shih e Sebastian Häni.</string>
    <string name="site_not_found">Local não encontrado</string>
    <string name="site_not_found_description">O conteúdo não foi encontrado no banco de dados.</string>
    <string name="site_information">Informações</string>
    <string name="site_address">Endereço</string>
    <string name="package_not_found">Pacote não foi encontrado</string>
    <string name="package_not_found_description">O código escaneado não foi encontrado no banco de dados.</string>
    <string name="package_information">Informações do Pacote</string>
    <string name="package_barcode">Código de Barras</string>
    <string name="package_weight">Peso</string>
    <string name="package_site">Localização</string>
    <string name="package_site_name">Nome</string>
    <string name="package_site_address">Endereço</string>
    <string name="package_location_history">Histórico de Localização</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="show_map">Mapa</string>
    <string name="sites_not_found">Localização não encontrada.</string>
    <string name="sites_not_found_description">Essa localização não fou encontrada.</string>
    <string name="confirm_package">Aceitar pacote</string>
    <string name="decline_package">Rejeitar pacote</string>
    <string name="action_sign_out">Sair</string>
    <string name="prompt_site_name">Nome da Cooperativa</string>
    <string name="prompt_site_address">Endereço</string>
    <string name="create_site">Criar cooperativa</string>
    <string name="material_info">Materiais</string>
    <string name="title_activity_site">Localização</string>
    <string name="title_activity_create_site">Localização</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="serialized_user">serialized_user</string>
</resources>
