<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_package_root"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PackageActivity">

    <RelativeLayout
        android:id="@+id/detail_header"
        android:layout_width="fill_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/package_picture"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/package_picture_description"
            android:scaleType="fitStart"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/package_picture_loading"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/package_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/package_picture"
            android:layout_toRightOf="@+id/package_picture"
            android:textIsSelectable="true"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/package_cooperative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/package_material"
            android:layout_toEndOf="@id/package_picture"
            android:layout_toRightOf="@+id/package_picture"
            android:textIsSelectable="true"
            android:textSize="18sp" />
    </RelativeLayout>

    <fragment
        android:id="@+id/package_info_list"
        android:name="institutosos.org.br.destinocerto.activity.detail.wastepackage.PackageListFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_header"
        tools:layout="@layout/fragment_item_list" />

    <Button
        android:id="@+id/decline_package_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/package_info_list"
        android:layout_marginTop="2dp"
        android:background="#BD1F1F"
        android:text="@string/decline_package"
        android:textColor="#fff" />

    <Button
        android:id="@+id/confirm_package_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/decline_package_button"
        android:background="#519827"
        android:text="@string/confirm_package"
        android:textColor="#fff" />
</RelativeLayout>